[tool.poetry]
name = "pyphp"
version = "0.0.1"
description = "Python helper functions to fill gaps that are used in PHP."
authors = ["David Mc Ken"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
